--- a/notebook/myreport2016_cpu.ipynb
+++ b/notebook/myreport2016_cpu.ipynb
@@ -56,26 +56,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(2162, 24)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "il y a  2162  lignes et  24  colonnes dans le data frame\n"
+     ]
     }
    ],
    "source": [
-    "tab.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "930854ee-00d2-43f6-8b91-105535497bd1",
-   "metadata": {},
-   "source": [
-    "Il y a 171 489 lignes et 28 colonnes dans le dataframe. "
+    "print(\"il y a \",tab.shape[0],\" lignes et \",tab.shape[1],\" colonnes dans le data frame\")"
    ]
   },
   {
@@ -118,40 +107,36 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 171489 entries, 0 to 171488\n",
-      "Data columns (total 28 columns):\n",
-      " #   Column                   Non-Null Count   Dtype  \n",
-      "---  ------                   --------------   -----  \n",
-      " 0   Server version           171489 non-null  object \n",
-      " 1   Client version           171489 non-null  object \n",
-      " 2   Model                    171489 non-null  object \n",
-      " 3   Type                     171489 non-null  object \n",
-      " 4   Insert mode              171489 non-null  object \n",
-      " 5   Rows added               171489 non-null  int64  \n",
-      " 6   Rows updated             171489 non-null  int64  \n",
-      " 7   Rows deleted             171489 non-null  int64  \n",
-      " 8   Rows in error            0 non-null       float64\n",
-      " 9   Rows in warning          0 non-null       float64\n",
-      " 10  Columns                  171489 non-null  int64  \n",
-      " 11  Date                     171489 non-null  object \n",
-      " 12  Start time               171489 non-null  object \n",
-      " 13  End  time                171489 non-null  object \n",
-      " 14  Duration                 171489 non-null  object \n",
-      " 15  Machine                  171489 non-null  object \n",
-      " 16  Session                  171489 non-null  object \n",
-      " 17  Project name             171489 non-null  object \n",
-      " 18  Product                  171489 non-null  object \n",
-      " 19  Result                   171489 non-null  object \n",
-      " 20  ETL_StartDateTime        171489 non-null  object \n",
-      " 21  Launcher_Id              4463 non-null    object \n",
-      " 22  Launcher_Name            171489 non-null  object \n",
-      " 23  Program_Id               168132 non-null  object \n",
-      " 24  Program_Name             171489 non-null  object \n",
-      " 25  Schedules_Id             167439 non-null  object \n",
-      " 26  Schedules_Name           167439 non-null  object \n",
-      " 27  Schedules_StartDateTime  171489 non-null  object \n",
-      "dtypes: float64(2), int64(4), object(22)\n",
-      "memory usage: 36.6+ MB\n"
+      "RangeIndex: 2162 entries, 0 to 2161\n",
+      "Data columns (total 24 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   Date et heure       2162 non-null   object \n",
+      " 1   Date et heure(RAW)  2161 non-null   float64\n",
+      " 2   Somme               1476 non-null   object \n",
+      " 3   Somme(RAW)          1475 non-null   float64\n",
+      " 4   Processeur 1        812 non-null    object \n",
+      " 5   Processeur 1(RAW)   1475 non-null   float64\n",
+      " 6   Processeur 2        993 non-null    object \n",
+      " 7   Processeur 2(RAW)   1475 non-null   float64\n",
+      " 8   Processeur 3        1230 non-null   object \n",
+      " 9   Processeur 3(RAW)   1475 non-null   float64\n",
+      " 10  Processeur 4        1031 non-null   object \n",
+      " 11  Processeur 4(RAW)   1475 non-null   float64\n",
+      " 12  Processeur 5        976 non-null    object \n",
+      " 13  Processeur 5(RAW)   1475 non-null   float64\n",
+      " 14  Processeur 6        1054 non-null   object \n",
+      " 15  Processeur 6(RAW)   1475 non-null   float64\n",
+      " 16  Processeur 7        1080 non-null   object \n",
+      " 17  Processeur 7(RAW)   1475 non-null   float64\n",
+      " 18  Processeur 8        912 non-null    object \n",
+      " 19  Processeur 8(RAW)   1475 non-null   float64\n",
+      " 20  Temps mort          1473 non-null   object \n",
+      " 21  Temps mort(RAW)     1475 non-null   float64\n",
+      " 22  Couverture          2162 non-null   object \n",
+      " 23  Couverture(RAW)     2161 non-null   float64\n",
+      "dtypes: float64(12), object(12)\n",
+      "memory usage: 405.5+ KB\n"
      ]
     }
    ],
@@ -531,16 +516,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "3cbfb6c1-ff71-4492-93dd-255839b03575",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (820021611.py, line 11)",
+     "evalue": "unterminated string literal (detected at line 11) (820021611.py, line 11)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[11], line 11\u001b[0;36m\u001b[0m\n\u001b[0;31m    t[0]=tab['Server version][tab['Server version']=='6.0.2']\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[6], line 11\u001b[0;36m\u001b[0m\n\u001b[0;31m    t[0]=tab['Server version][tab['Server version']=='6.0.2']\u001b[0m\n\u001b[0m                                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unterminated string literal (detected at line 11)\n"
      ]
     }
    ],
