--- a/notebook/myreport_ram_full.ipynb
+++ b/notebook/myreport_ram_full.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "3f5d10ae-f8ab-4651-a142-cc6fb2017403",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "af43f6a9-1456-4b02-bff7-5aaeb5a9efc7",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "0b1590ea-42ef-43e1-b74e-416312a20dcc",
    "metadata": {},
    "outputs": [
@@ -69,24 +69,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "b592af3f-84fe-43ee-be6a-15c7735f1f58",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Server version', 'Client version', 'Model', 'Type', 'Insert mode',\n",
-       "       'Rows added', 'Rows updated', 'Rows deleted', 'Rows in error',\n",
-       "       'Rows in warning', 'Columns', 'Date', 'Start time', 'End  time',\n",
-       "       'Duration', 'Machine', 'Session', 'Project name', 'Product', 'Result',\n",
-       "       'ETL_StartDateTime', 'Launcher_Id', 'Launcher_Name', 'Program_Id',\n",
-       "       'Program_Name', 'Schedules_Id', 'Schedules_Name',\n",
-       "       'Schedules_StartDateTime'],\n",
+       "Index(['Date et heure', 'Date et heure(RAW)', 'Mémoire disponible (%)',\n",
+       "       'Mémoire disponible (%)(RAW)', 'Mémoire disponible',\n",
+       "       'Mémoire disponible(RAW)', 'Temps mort', 'Temps mort(RAW)',\n",
+       "       'Couverture', 'Couverture(RAW)'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "f3d6719b-bdfb-4c39-8791-a2e91bc0859e",
    "metadata": {},
    "outputs": [
@@ -106,40 +103,22 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 171489 entries, 0 to 171488\n",
-      "Data columns (total 28 columns):\n",
-      " #   Column                   Non-Null Count   Dtype  \n",
-      "---  ------                   --------------   -----  \n",
-      " 0   Server version           171489 non-null  object \n",
-      " 1   Client version           171489 non-null  object \n",
-      " 2   Model                    171489 non-null  object \n",
-      " 3   Type                     171489 non-null  object \n",
-      " 4   Insert mode              171489 non-null  object \n",
-      " 5   Rows added               171489 non-null  int64  \n",
-      " 6   Rows updated             171489 non-null  int64  \n",
-      " 7   Rows deleted             171489 non-null  int64  \n",
-      " 8   Rows in error            0 non-null       float64\n",
-      " 9   Rows in warning          0 non-null       float64\n",
-      " 10  Columns                  171489 non-null  int64  \n",
-      " 11  Date                     171489 non-null  object \n",
-      " 12  Start time               171489 non-null  object \n",
-      " 13  End  time                171489 non-null  object \n",
-      " 14  Duration                 171489 non-null  object \n",
-      " 15  Machine                  171489 non-null  object \n",
-      " 16  Session                  171489 non-null  object \n",
-      " 17  Project name             171489 non-null  object \n",
-      " 18  Product                  171489 non-null  object \n",
-      " 19  Result                   171489 non-null  object \n",
-      " 20  ETL_StartDateTime        171489 non-null  object \n",
-      " 21  Launcher_Id              4463 non-null    object \n",
-      " 22  Launcher_Name            171489 non-null  object \n",
-      " 23  Program_Id               168132 non-null  object \n",
-      " 24  Program_Name             171489 non-null  object \n",
-      " 25  Schedules_Id             167439 non-null  object \n",
-      " 26  Schedules_Name           167439 non-null  object \n",
-      " 27  Schedules_StartDateTime  171489 non-null  object \n",
-      "dtypes: float64(2), int64(4), object(22)\n",
-      "memory usage: 36.6+ MB\n"
+      "RangeIndex: 2882 entries, 0 to 2881\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column                       Non-Null Count  Dtype  \n",
+      "---  ------                       --------------  -----  \n",
+      " 0   Date et heure                2882 non-null   object \n",
+      " 1   Date et heure(RAW)           2881 non-null   float64\n",
+      " 2   Mémoire disponible (%)       2195 non-null   object \n",
+      " 3   Mémoire disponible (%)(RAW)  2194 non-null   float64\n",
+      " 4   Mémoire disponible           2195 non-null   object \n",
+      " 5   Mémoire disponible(RAW)      2194 non-null   float64\n",
+      " 6   Temps mort                   2195 non-null   object \n",
+      " 7   Temps mort(RAW)              2194 non-null   float64\n",
+      " 8   Couverture                   2882 non-null   object \n",
+      " 9   Couverture(RAW)              2881 non-null   float64\n",
+      "dtypes: float64(5), object(5)\n",
+      "memory usage: 225.3+ KB\n"
      ]
     }
    ],
