--- a/notebook/myreport_sql_statistic_full.ipynb
+++ b/notebook/myreport_sql_statistic_full.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "3f5d10ae-f8ab-4651-a142-cc6fb2017403",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "af43f6a9-1456-4b02-bff7-5aaeb5a9efc7",
    "metadata": {},
    "outputs": [],
@@ -51,50 +51,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "0b1590ea-42ef-43e1-b74e-416312a20dcc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(2882, 12)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "il y a  2882  lignes et  12  colonnes dans le data frame\n"
+     ]
     }
    ],
    "source": [
-    "tab.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "930854ee-00d2-43f6-8b91-105535497bd1",
-   "metadata": {},
-   "source": [
-    "Il y a 202 402 lignes et 19 colonnes dans le dataframe. "
+    "print(\"il y a \",tab.shape[0],\" lignes et \",tab.shape[1],\" colonnes dans le data frame\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "b592af3f-84fe-43ee-be6a-15c7735f1f58",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Server version', 'Client version', 'Product', 'Project name', 'Model',\n",
-       "       'Date', 'Time', 'Row number', 'Type', 'Message', 'ETL_StartDateTime',\n",
-       "       'Launcher_Id', 'Launcher_Name', 'Machine', 'Program_Id', 'Program_Name',\n",
-       "       'Schedules_Id', 'Schedules_Name', 'Schedules_StartDateTime'],\n",
+       "Index(['Date et heure', 'Date et heure(RAW)', 'Nombre de requêtes de lots/s',\n",
+       "       'Nombre de requêtes de lots/s(RAW)', 'Compilations SQL/s',\n",
+       "       'Compilations SQL/s(RAW)', 'Recompilations SQL/s',\n",
+       "       'Recompilations SQL/s(RAW)', 'Temps mort', 'Temps mort(RAW)',\n",
+       "       'Couverture', 'Couverture(RAW)'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "f3d6719b-bdfb-4c39-8791-a2e91bc0859e",
    "metadata": {},
    "outputs": [
@@ -114,31 +104,24 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 202402 entries, 0 to 202401\n",
-      "Data columns (total 19 columns):\n",
-      " #   Column                   Non-Null Count   Dtype \n",
-      "---  ------                   --------------   ----- \n",
-      " 0   Server version           202402 non-null  object\n",
-      " 1   Client version           202402 non-null  object\n",
-      " 2   Product                  202402 non-null  object\n",
-      " 3   Project name             202402 non-null  object\n",
-      " 4   Model                    202402 non-null  object\n",
-      " 5   Date                     202402 non-null  object\n",
-      " 6   Time                     202402 non-null  object\n",
-      " 7   Row number               202402 non-null  int64 \n",
-      " 8   Type                     202402 non-null  object\n",
-      " 9   Message                  202402 non-null  object\n",
-      " 10  ETL_StartDateTime        202402 non-null  object\n",
-      " 11  Launcher_Id              201963 non-null  object\n",
-      " 12  Launcher_Name            202402 non-null  object\n",
-      " 13  Machine                  202402 non-null  object\n",
-      " 14  Program_Id               440 non-null     object\n",
-      " 15  Program_Name             202402 non-null  object\n",
-      " 16  Schedules_Id             440 non-null     object\n",
-      " 17  Schedules_Name           440 non-null     object\n",
-      " 18  Schedules_StartDateTime  202402 non-null  object\n",
-      "dtypes: int64(1), object(18)\n",
-      "memory usage: 29.3+ MB\n"
+      "RangeIndex: 2882 entries, 0 to 2881\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                             Non-Null Count  Dtype  \n",
+      "---  ------                             --------------  -----  \n",
+      " 0   Date et heure                      2882 non-null   object \n",
+      " 1   Date et heure(RAW)                 2881 non-null   float64\n",
+      " 2   Nombre de requêtes de lots/s       2195 non-null   object \n",
+      " 3   Nombre de requêtes de lots/s(RAW)  2194 non-null   float64\n",
+      " 4   Compilations SQL/s                 1912 non-null   object \n",
+      " 5   Compilations SQL/s(RAW)            2194 non-null   float64\n",
+      " 6   Recompilations SQL/s               990 non-null    object \n",
+      " 7   Recompilations SQL/s(RAW)          2194 non-null   float64\n",
+      " 8   Temps mort                         2195 non-null   object \n",
+      " 9   Temps mort(RAW)                    2194 non-null   float64\n",
+      " 10  Couverture                         2882 non-null   object \n",
+      " 11  Couverture(RAW)                    2881 non-null   float64\n",
+      "dtypes: float64(6), object(6)\n",
+      "memory usage: 270.3+ KB\n"
      ]
     }
    ],
