--- a/notebook/EDA_logs_erreur.ipynb
+++ b/notebook/EDA_logs_erreur.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "id": "3f5d10ae-f8ab-4651-a142-cc6fb2017403",
    "metadata": {},
    "outputs": [],
@@ -33,12 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "af43f6a9-1456-4b02-bff7-5aaeb5a9efc7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tab = pda.read_csv('../Data/241016_LogETLError.csv', sep=';', dtype={'Program_Id': str, 'Schedules_Id': str, 'Schedules_Name': str})"
+    "tab = pda.read_csv('../Data/logEtl/241016_LogETLError.csv', sep=';', dtype={'Program_Id': str, 'Schedules_Id': str, 'Schedules_Name': str})"
    ]
   },
   {
@@ -51,36 +51,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "id": "0b1590ea-42ef-43e1-b74e-416312a20dcc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(202402, 19)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "il y a  202402  lignes et  19  colonnes dans le data frame\n"
+     ]
     }
    ],
    "source": [
-    "tab.shape"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "930854ee-00d2-43f6-8b91-105535497bd1",
-   "metadata": {},
-   "source": [
-    "Il y a 202 402 lignes et 19 colonnes dans le dataframe. "
+    "print(\"il y a \",tab.shape[0],\" lignes et \",tab.shape[1],\" colonnes dans le data frame\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "b592af3f-84fe-43ee-be6a-15c7735f1f58",
    "metadata": {},
    "outputs": [
@@ -94,7 +83,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "f3d6719b-bdfb-4c39-8791-a2e91bc0859e",
    "metadata": {},
    "outputs": [
@@ -148,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "bb7809d9-d2fc-4486-a920-128db6e2b15e",
    "metadata": {},
    "outputs": [
