--- a/notebook/myreport_cpu_full.ipynb
+++ b/notebook/myreport_cpu_full.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "3f5d10ae-f8ab-4651-a142-cc6fb2017403",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "093f2159-38cf-49e0-adb1-6b1af8ee222a",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/echo/home/3.cours/centraleSupelec/code/smartETL/notebook\n"
+      "/Users/leylayu/Desktop/projet-industriel/smartETL/notebook\n"
      ]
     }
    ],
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "af43f6a9-1456-4b02-bff7-5aaeb5a9efc7",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "0b1590ea-42ef-43e1-b74e-416312a20dcc",
    "metadata": {},
    "outputs": [
@@ -88,9 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "b592af3f-84fe-43ee-be6a-15c7735f1f58",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -106,7 +108,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,9 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "f3d6719b-bdfb-4c39-8791-a2e91bc0859e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -167,7 +171,9 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "aecf413c-4659-46be-afa9-4637621c0dcb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -215,17 +221,15 @@
    "cell_type": "markdown",
    "id": "53429984-1b06-48bc-9e17-86636b8fc304",
    "metadata": {},
-   "source": [
-    "On peut déjà voir que :\n",
-    "- faudra supprimer les colonnes 8 et 9 car elles sont vides\n",
-    "- colonnes 21, 23, 25, 26 contiennent certains élements vides"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 24,
    "id": "bb7809d9-d2fc-4486-a920-128db6e2b15e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -271,9 +275,7 @@
    "cell_type": "markdown",
    "id": "d8834160-09d5-4e9d-8c16-59bed1282159",
    "metadata": {},
-   "source": [
-    "En plus des colonnes 8 et 9, on pourra supprimer les colonnes 15, 16, 17. "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -510,9 +512,7 @@
   {
    "cell_type": "markdown",
    "id": "6665de3d-f731-4da1-ad44-c3c12c5dc988",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Regardons le détail par colonne"
    ]
@@ -1043,9 +1043,7 @@
    "cell_type": "markdown",
    "id": "61baa256-1b01-4293-a959-921ffe4c2994",
    "metadata": {},
-   "source": [
-    "On voit qu'il y a des jours avec beaucoup de processus ETL, faudrait vérifier s'il y a une cadence hebdo/mensuelle"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1257,9 +1255,7 @@
    "cell_type": "markdown",
    "id": "d9536996-4673-47cb-a703-2363630627d2",
    "metadata": {},
-   "source": [
-    "Inutile de conserver cette colonne. "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1305,14 +1301,14 @@
    "cell_type": "markdown",
    "id": "049e85d8-68ce-4d24-996a-962ee835def8",
    "metadata": {},
-   "source": [
-    "Inutile de conserver cette colonne."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "090917dd-ac6e-4546-a581-1181f1558119",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### Project name"
    ]
@@ -2048,9 +2044,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2062,7 +2058,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
