--- a/notebook/myreport_swap_full.ipynb
+++ b/notebook/myreport_swap_full.ipynb
@@ -46,7 +46,7 @@
    "id": "ea46cfca-50ad-446f-ab1d-9b652c920009",
    "metadata": {},
    "source": [
-    "### Le fichier 241016_LogETLError.csv"
+    "### Le fichier myreport_swap_full.csv"
    ]
   },
   {
@@ -151,12 +151,6 @@
     "# Afficher les résultats\n",
     "print(nb_valeurs_uniques)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d8834160-09d5-4e9d-8c16-59bed1282159",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -359,9 +353,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -373,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
