modification des notebook en masse

--- a/notebook/myreport2016_cpu.ipynb
+++ b/notebook/myreport2016_cpu.ipynb
@@ -148,11 +148,7 @@
    "cell_type": "markdown",
    "id": "53429984-1b06-48bc-9e17-86636b8fc304",
    "metadata": {},
-   "source": [
-    "On peut déjà voir que :\n",
-    "- faudra supprimer les colonnes 8 et 9 car elles sont vides\n",
-    "- colonnes 21, 23, 25, 26 contiennent certains élements vides"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -204,9 +200,7 @@
    "cell_type": "markdown",
    "id": "d8834160-09d5-4e9d-8c16-59bed1282159",
    "metadata": {},
-   "source": [
-    "En plus des colonnes 8 et 9, on pourra supprimer les colonnes 15, 16, 17. "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -433,19 +427,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f607fb5-5cbd-4ffb-b5e6-5cbb78f3a2a1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "6665de3d-f731-4da1-ad44-c3c12c5dc988",
    "metadata": {},
    "source": [
-    "## Regardons le détail par colonne"
+    "## Analyse temporelle"
    ]
   },
   {
