--- a/notebook/myreport_swap_full.ipynb
+++ b/notebook/myreport_swap_full.ipynb
@@ -279,15 +279,7 @@
    "id": "6665de3d-f731-4da1-ad44-c3c12c5dc988",
    "metadata": {},
    "source": [
-    "## Regardons le détail par colonne"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b6c23d3f-1493-4d7e-b45d-3f628044a847",
-   "metadata": {},
-   "source": [
-    "### Analyse temporelle"
+    "## Analyse temporelle"
    ]
   },
   {
