--- a/notebook/myreport_sql_statistic_full.ipynb
+++ b/notebook/myreport_sql_statistic_full.ipynb
@@ -343,14 +343,16 @@
    "id": "6665de3d-f731-4da1-ad44-c3c12c5dc988",
    "metadata": {},
    "source": [
-    "## Regardons le détail par colonne"
+    "## Analyse temporelle"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
    "id": "22b728e0-c918-484e-a174-8f4e04062d7d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
