--- a/notebook/myreport_ping_full.ipynb
+++ b/notebook/myreport_ping_full.ipynb
@@ -134,7 +134,7 @@
    "id": "6665de3d-f731-4da1-ad44-c3c12c5dc988",
    "metadata": {},
    "source": [
-    "## Regardons le détail par colonne"
+    "## Analyse temporelle"
    ]
   },
   {
@@ -143,7 +143,20 @@
    "id": "2ed04787-9b7c-4e78-a46a-bcf3c4805d91",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df=tab.copy()\n",
+    "\n",
+    "# Boucle pour générer les graphiques\n",
+    "for col in df.columns:\n",
+    "    if col != 'Date et heure(RAW)' and \"RAW\" in col:  # Exclure la colonne 'Date et heure(RAW)'\n",
+    "        plt.figure(figsize=(10, 6))\n",
+    "        df[col].plot(kind='line', title=f'Évolution de : {col}')\n",
+    "        plt.xlabel('Date et heure')\n",
+    "        plt.ylabel(col)\n",
+    "        plt.grid(True)\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()"
+   ]
   }
  ],
  "metadata": {
