--- a/notebook/myreport_espace_disque_full.ipynb
+++ b/notebook/myreport_espace_disque_full.ipynb
@@ -130,7 +130,28 @@
    "id": "6665de3d-f731-4da1-ad44-c3c12c5dc988",
    "metadata": {},
    "source": [
-    "## Regardons le détail par colonne"
+    "## Analyse temporelle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d331bdb7-216b-45aa-88dc-6b8d73ab9b4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=tab.copy()\n",
+    "\n",
+    "# Boucle pour générer les graphiques\n",
+    "for col in df.columns:\n",
+    "    if col != 'Date et heure(RAW)' and \"RAW\" in col:  # Exclure la colonne 'Date et heure(RAW)'\n",
+    "        plt.figure(figsize=(10, 6))\n",
+    "        df[col].plot(kind='line', title=f'Évolution de : {col}')\n",
+    "        plt.xlabel('Date et heure')\n",
+    "        plt.ylabel(col)\n",
+    "        plt.grid(True)\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()"
    ]
   }
  ],
