Modifications des notebook des fichiers parquets.

--- a/notebook/DetailedDistributionLogs_sub_2411222036.ipynb
+++ b/notebook/DetailedDistributionLogs_sub_2411222036.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -70,6 +70,17 @@
     "\n",
     "# Afficher les premières lignes\n",
     "print(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop colonnes inutiles\n",
+    "\n",
+    "df = df.drop(columns=['FirstName','LastName']) "
    ]
   },
   {
