--- a/notebook/myreport_ram_full.ipynb
+++ b/notebook/myreport_ram_full.ipynb
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 56,
    "id": "52b7c105-bac8-4e46-a9cc-c8f4a96771f2",
    "metadata": {
     "scrolled": true
@@ -911,7 +911,19 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "# Exclure les colonnes non numériques\n",
+    "numerical_cols = tab.select_dtypes(include=['number']).columns\n",
+    "\n",
+    "# Tracer un boxplot pour chaque colonne\n",
+    "for col in numerical_cols:\n",
+    "    if col not in excluded_cols:  # Exclure les colonnes non pertinentes\n",
+    "        plt.figure(figsize=(8, 5))\n",
+    "        sns.boxplot(y=tab[col])\n",
+    "        plt.title(f\"Boxplot de {col}\")\n",
+    "        plt.grid()\n",
+    "        plt.show()"
+   ]
   },
   {
    "cell_type": "code",
@@ -967,18 +979,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "8471fc2d-2ba8-4929-9d0c-09466169f04d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#### ATTENTION au path et nom de fichier\n",
+    "tab.to_csv(\"../data/logServer/filtered/myreport_ram_filtered.csv\", index=False, encoding='utf-8')"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "6665de3d-f731-4da1-ad44-c3c12c5dc988",
    "metadata": {},
    "source": [
-    "## Analyse \n"
+    "## Obsolete \n"
    ]
   },
   {
