modif myreport_sql_gestionairedememoire_full.ipynb

--- a/notebook/myreport_sql_gestionairedememoire_full.ipynb
+++ b/notebook/myreport_sql_gestionairedememoire_full.ipynb
@@ -1000,16 +1000,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f81c25ba-5e59-4f88-878b-d887efb71cab",
+   "cell_type": "markdown",
+   "id": "c9e10b41-9e4e-4904-96b7-b8e2d678b00c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Enregistrement du nouveau dataframe dans un nouveau csv"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "6de5c435-ffec-4439-ba75-86116c54d94d",
    "metadata": {},
    "outputs": [],
@@ -1017,6 +1017,14 @@
     "#### ATTENTION au path et nom de fichier\n",
     "tab.to_csv(\"../data/logServer/filtered/myreport_sql_gestionairedememoire_filtered.csv\", index=False, encoding='utf-8')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac749a01-562a-4001-8ebd-776eaa6ae4da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
