modifs de paths et de colonnes à supprimer

--- a/notebook/myreport_swap_full.ipynb
+++ b/notebook/myreport_swap_full.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 138,
    "id": "3f5d10ae-f8ab-4651-a142-cc6fb2017403",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 139,
    "id": "af43f6a9-1456-4b02-bff7-5aaeb5a9efc7",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 141,
    "id": "0b1590ea-42ef-43e1-b74e-416312a20dcc",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 142,
    "id": "b592af3f-84fe-43ee-be6a-15c7735f1f58",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 143,
    "id": "f3d6719b-bdfb-4c39-8791-a2e91bc0859e",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 144,
    "id": "bb7809d9-d2fc-4486-a920-128db6e2b15e",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 145,
    "id": "4b14c57d-f9ee-4fbf-8294-1208620d494d",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "4        0 %              0.0      100 %          10000.0  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 147,
    "id": "e72d80f7-908a-440a-a131-89cd6f5c03e8",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 149,
    "id": "14b3152e-d1ab-461f-9c1a-f273146a0553",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 150,
    "id": "76c2b37b-2b73-4096-bef9-e700785a4787",
    "metadata": {},
    "outputs": [],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 151,
    "id": "4959567b-55ea-4a91-8a3c-9bd330d53376",
    "metadata": {},
    "outputs": [
@@ -390,9 +390,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>date_full</th>\n",
-       "      <th>date</th>\n",
-       "      <th>heure</th>\n",
        "      <th>Date et heure</th>\n",
        "      <th>Date et heure(RAW)</th>\n",
        "      <th>Total</th>\n",
@@ -401,14 +398,14 @@
        "      <th>Temps mort(RAW)</th>\n",
        "      <th>Couverture</th>\n",
        "      <th>Couverture(RAW)</th>\n",
+       "      <th>date_full</th>\n",
+       "      <th>date</th>\n",
+       "      <th>heure</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2024-08-13 01:00:00</td>\n",
-       "      <td>2024-08-13</td>\n",
-       "      <td>01</td>\n",
        "      <td>13/08/2024 02:00:00 - 03:00:00</td>\n",
        "      <td>45517.041667</td>\n",
        "      <td>3 %</td>\n",
@@ -417,12 +414,12 @@
        "      <td>0.0</td>\n",
        "      <td>100 %</td>\n",
        "      <td>10000.0</td>\n",
+       "      <td>2024-08-13 01:00:00</td>\n",
+       "      <td>2024-08-13</td>\n",
+       "      <td>01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2024-08-13 02:00:00</td>\n",
-       "      <td>2024-08-13</td>\n",
-       "      <td>02</td>\n",
        "      <td>13/08/2024 03:00:00 - 04:00:00</td>\n",
        "      <td>45517.083333</td>\n",
        "      <td>3 %</td>\n",
@@ -431,12 +428,12 @@
        "      <td>0.0</td>\n",
        "      <td>100 %</td>\n",
        "      <td>10000.0</td>\n",
+       "      <td>2024-08-13 02:00:00</td>\n",
+       "      <td>2024-08-13</td>\n",
+       "      <td>02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2024-08-13 03:00:00</td>\n",
-       "      <td>2024-08-13</td>\n",
-       "      <td>03</td>\n",
        "      <td>13/08/2024 04:00:00 - 05:00:00</td>\n",
        "      <td>45517.125000</td>\n",
        "      <td>3 %</td>\n",
@@ -445,12 +442,12 @@
        "      <td>0.0</td>\n",
        "      <td>100 %</td>\n",
        "      <td>10000.0</td>\n",
+       "      <td>2024-08-13 03:00:00</td>\n",
+       "      <td>2024-08-13</td>\n",
+       "      <td>03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>2024-08-13 04:00:00</td>\n",
-       "      <td>2024-08-13</td>\n",
-       "      <td>04</td>\n",
        "      <td>13/08/2024 05:00:00 - 06:00:00</td>\n",
        "      <td>45517.166667</td>\n",
        "      <td>3 %</td>\n",
@@ -459,12 +456,12 @@
        "      <td>0.0</td>\n",
        "      <td>100 %</td>\n",
        "      <td>10000.0</td>\n",
+       "      <td>2024-08-13 04:00:00</td>\n",
+       "      <td>2024-08-13</td>\n",
+       "      <td>04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>2024-08-13 05:00:00</td>\n",
-       "      <td>2024-08-13</td>\n",
-       "      <td>05</td>\n",
        "      <td>13/08/2024 06:00:00 - 07:00:00</td>\n",
        "      <td>45517.208333</td>\n",
        "      <td>3 %</td>\n",
@@ -473,35 +470,38 @@
        "      <td>0.0</td>\n",
        "      <td>100 %</td>\n",
        "      <td>10000.0</td>\n",
+       "      <td>2024-08-13 05:00:00</td>\n",
+       "      <td>2024-08-13</td>\n",
+       "      <td>05</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            date_full        date heure                   Date et heure  \\\n",
-       "2 2024-08-13 01:00:00  2024-08-13    01  13/08/2024 02:00:00 - 03:00:00   \n",
-       "3 2024-08-13 02:00:00  2024-08-13    02  13/08/2024 03:00:00 - 04:00:00   \n",
-       "4 2024-08-13 03:00:00  2024-08-13    03  13/08/2024 04:00:00 - 05:00:00   \n",
-       "5 2024-08-13 04:00:00  2024-08-13    04  13/08/2024 05:00:00 - 06:00:00   \n",
-       "6 2024-08-13 05:00:00  2024-08-13    05  13/08/2024 06:00:00 - 07:00:00   \n",
+       "                    Date et heure  Date et heure(RAW) Total  Total(RAW)  \\\n",
+       "2  13/08/2024 02:00:00 - 03:00:00        45517.041667   3 %         3.0   \n",
+       "3  13/08/2024 03:00:00 - 04:00:00        45517.083333   3 %         3.0   \n",
+       "4  13/08/2024 04:00:00 - 05:00:00        45517.125000   3 %         3.0   \n",
+       "5  13/08/2024 05:00:00 - 06:00:00        45517.166667   3 %         3.0   \n",
+       "6  13/08/2024 06:00:00 - 07:00:00        45517.208333   3 %         3.0   \n",
        "\n",
-       "   Date et heure(RAW) Total  Total(RAW) Temps mort  Temps mort(RAW)  \\\n",
-       "2        45517.041667   3 %         3.0        0 %              0.0   \n",
-       "3        45517.083333   3 %         3.0        0 %              0.0   \n",
-       "4        45517.125000   3 %         3.0        0 %              0.0   \n",
-       "5        45517.166667   3 %         3.0        0 %              0.0   \n",
-       "6        45517.208333   3 %         3.0        0 %              0.0   \n",
+       "  Temps mort  Temps mort(RAW) Couverture  Couverture(RAW)           date_full  \\\n",
+       "2        0 %              0.0      100 %          10000.0 2024-08-13 01:00:00   \n",
+       "3        0 %              0.0      100 %          10000.0 2024-08-13 02:00:00   \n",
+       "4        0 %              0.0      100 %          10000.0 2024-08-13 03:00:00   \n",
+       "5        0 %              0.0      100 %          10000.0 2024-08-13 04:00:00   \n",
+       "6        0 %              0.0      100 %          10000.0 2024-08-13 05:00:00   \n",
        "\n",
-       "  Couverture  Couverture(RAW)  \n",
-       "2      100 %          10000.0  \n",
-       "3      100 %          10000.0  \n",
-       "4      100 %          10000.0  \n",
-       "5      100 %          10000.0  \n",
-       "6      100 %          10000.0  "
+       "         date heure  \n",
+       "2  2024-08-13    01  \n",
+       "3  2024-08-13    02  \n",
+       "4  2024-08-13    03  \n",
+       "5  2024-08-13    04  \n",
+       "6  2024-08-13    05  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 152,
    "id": "3a46dfe4-7ecf-402a-ac55-a42c6ae727df",
    "metadata": {},
    "outputs": [],
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 153,
    "id": "a6653444-8f6c-4a19-95eb-541be0151373",
    "metadata": {},
    "outputs": [],
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 154,
    "id": "af236986-f359-483f-97f6-b71120dfa0b6",
    "metadata": {},
    "outputs": [
@@ -650,7 +650,7 @@
        "6                 0.0             10000.0  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 155,
    "id": "b8be8ede-99f6-409a-aec7-a272c84b6386",
    "metadata": {},
    "outputs": [
@@ -687,9 +687,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 157,
    "id": "d231d99f-419f-4c75-8b24-bd29ba546e06",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -754,9 +756,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 158,
    "id": "90698ea6-ab25-4a6f-972b-d07107f1d714",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -807,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 159,
    "id": "b3976fd9-2b8f-4d5b-82be-ad666ddd1d84",
    "metadata": {},
    "outputs": [
@@ -851,6 +855,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b6057fdb-67e5-4933-8475-c5c94f86180c",
+   "metadata": {},
+   "source": [
+    "### drop des colonnes inutiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "29bba621-4f5c-4b48-8e5b-17e5477cc704",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tab = tab.drop(columns=[\"swap Temps mort(%)\"])\n",
+    "tab = tab.drop(columns=[\"swap Couverture(%)\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c399bbd5-10b9-4f5f-a45f-96be36065c60",
    "metadata": {},
    "source": [
@@ -859,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 163,
    "id": "2da3dac9-8a12-472c-b2fb-72e5c911138e",
    "metadata": {},
    "outputs": [],
